crates/forge_domain/src/snapshots/forge_domain__agent__tests__agent_json_format-2.snap
---
source: crates/forge_domain/src/agent.rs
expression: minimal_agent
snapshot_kind: text
---
{
  "name": "Coder"
}
