crates/forge_domain/src/snapshots/forge_domain__agent__tests__agent_json_format-3.snap
---
source: crates/forge_domain/src/agent.rs
expression: file_agent
snapshot_kind: text
---
{
  "name": "Coder",
  "description": "A coding assistant",
  "systemPrompt": {
    "file": "prompts/system.md"
  },
  "userPrompt": {
    "file": "prompts/user.md"
  }
}
